@@ -60,6 +60,8 @@ public abstract class AbstractTestCase extends LuceneTestCase {
   protected QueryParser paB;
   
   protected static final String[] shortMVValues = {
+    "",
+    "",
     "a b c",
     "",   // empty data in multi valued field
     "d e"
@@ -352,6 +354,9 @@ public abstract class AbstractTestCase extends LuceneTestCase {
   }
   
   protected void makeIndexShortMV() throws Exception {
+    
+    // ""
+    // ""
 
     //  012345
     // "a b c"
